# anbox

./: .clang-format  .gitignore  .gitmodules  .travis.yml  AUTHORS  Android.mk  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  build.sh  cmake_uninstall.cmake.in  create-click.sh  cross-compile-chroot.sh  snapcraft.yaml
android/: Android.mk  AndroidManifest.xml  CMakeLists.txt  README.md  anboxd.rc  fstab.goldfish  init.goldfish.rc  init.goldfish.sh  ueventd.goldfish.rc
android/app_manager/: Android.mk  AndroidManifest.xml
android/appmgr/: Android.mk  AndroidManifest.xml
android/audio/: Android.mk  NOTICE  audio_hw.c  audio_hw.cpp
android/bootanimation/: Android.mk  BootAnimation.cpp  BootAnimation.h  bootanimation_main.cpp
android/camera/: Android.mk  CallbackNotifier.cpp  CallbackNotifier.h  Converters.cpp  Converters.h  EmulatedBaseCamera.cpp  EmulatedBaseCamera.h  EmulatedCamera.cpp  EmulatedCamera.h  EmulatedCamera2.cpp  EmulatedCamera2.h  EmulatedCamera3.cpp  EmulatedCamera3.h  EmulatedCameraCommon.h  EmulatedCameraDevice.cpp  EmulatedCameraDevice.h  EmulatedCameraFactory.cpp  EmulatedCameraFactory.h  EmulatedCameraHal.cpp  EmulatedCameraHotplugThread.cpp  EmulatedCameraHotplugThread.h  EmulatedFakeCamera.cpp  EmulatedFakeCamera.h  EmulatedFakeCamera2.cpp  EmulatedFakeCamera2.h  EmulatedFakeCamera3.cpp  EmulatedFakeCamera3.h  EmulatedFakeCameraDevice.cpp  EmulatedFakeCameraDevice.h  EmulatedQemuCamera.cpp  EmulatedQemuCamera.h  EmulatedQemuCamera2.cpp  EmulatedQemuCamera2.h  EmulatedQemuCameraDevice.cpp  EmulatedQemuCameraDevice.h  JpegCompressor.cpp  JpegCompressor.h  JpegStub.cpp  JpegStub.h  PreviewWindow.cpp  (+3 more)
android/camera/fake-pipeline2/: Base.h  JpegCompressor.cpp  JpegCompressor.h  Scene.cpp  Scene.h  Sensor.cpp  Sensor.h
android/data/etc/: apns-conf.xml
android/fingerprint/: Android.mk  fingerprint.c
android/gps/: Android.mk  gps_qemu.c
android/hwcomposer/: hwcomposer.cpp
android/jni/: anbox_support.cpp
android/launcher/: Android.mk  AndroidManifest.xml
android/lights/: Android.mk  lights_qemu.c
android/media/: media_codecs.xml  media_codecs_google_audio.xml  media_codecs_google_telephony.xml  media_codecs_google_tv.xml  media_codecs_google_video.xml  media_profiles.xml
android/opengl/: Android.mk  README  common.mk
android/phys_networking/: wpa_supplicant_eth.conf
android/power/: Android.mk  power_qemu.c
android/products/: anbox.xml  anbox_arm64.mk  anbox_x86_64.mk
android/products/arm64/: BoardConfig.mk
android/products/armv7-a-neon/: BoardConfig.mk
android/qemu-props/: Android.mk  qemu-props.c
android/qemud/: Android.mk  qemud.c
android/res/layout/: activity_main.xml  navigation_bar.xml
android/res/values/: attrs.xml  dimens.xml  strings.xml
android/sensors/: Android.mk  sensors_qemu.c
android/service/: activity_manager_interface.cpp  activity_manager_interface.h  android_api_skeleton.cpp  android_api_skeleton.h  daemon.cpp  daemon.h  host_connector.cpp  host_connector.h  local_socket_connection.cpp  local_socket_connection.h  main.cpp  message_processor.cpp  message_processor.h  platform_api.cpp  platform_api.h  platform_api_stub.cpp  platform_api_stub.h  platform_service.cpp  platform_service.h  platform_service_interface.cpp  platform_service_interface.h  server.cpp  server.h  test_platform_service.cpp
android/shared_compositor/: Android.mk  main.cpp  surface_composer.cpp  surface_composer.h
android/vibrator/: Android.mk  vibrator_qemu.c
android/wifi/: regenerate_if_name.sh  wpa_supplicant.conf
android/wifi-patch/: Android.mk  wifiStateMachine.patch
src/: CMakeLists.txt  container_main.cpp  main.cpp
src/anbox/: application_manager.h  cli.cpp  cli.h  config.cpp  config.h  config.h.in  container.cpp  container.h  container_connector.cpp  container_connector.h  daemon.cpp  daemon.h  defer_action.h  do_not_copy_or_move.h  id_map_writer.cpp  id_map_writer.h  input_channel.cpp  input_channel.h  logger.cpp  logger.h  namespace_attacher.cpp  namespace_attacher.h  not_reachable.cpp  not_reachable.h  optional.h  pid_persister.cpp  pid_persister.h  runtime.cpp  runtime.h  system_configuration.cpp  system_configuration.h  utils.cpp  utils.h  version.cpp  version.h
src/anbox/android/: intent.cpp  intent.h  ip_config_builder.cpp  ip_config_builder.h
src/anbox/application/: database.cpp  database.h  gps_info_broker.h  launcher_storage.cpp  launcher_storage.h  manager.h  sensor_type.cpp  sensor_type.h  sensors_state.h
src/anbox/audio/: client_info.h  server.cpp  server.h  sink.h  source.h
src/anbox/bridge/: android_api_stub.cpp  android_api_stub.h  connection_creator.cpp  connection_creator.h  constants.h  make_protobuf_object.h  message_processor.cpp  message_processor.h  pending_call_cache.cpp  pending_call_cache.h  platform_api_proxy.cpp  platform_api_proxy.h  platform_api_skeleton.cpp  platform_api_skeleton.h  platform_message_processor.cpp  platform_message_processor.h  platform_server.cpp  platform_server.h  rpc_channel.cpp  rpc_channel.h  template_message_processor.h
src/anbox/camera/: camera_common.h  camera_device.h  camera_device_linux.cpp  camera_format_converters.cpp  camera_format_converters.h  camera_service.cpp  camera_service.h
src/anbox/cmds/: check_features.cpp  check_features.h  container_manager.cpp  container_manager.h  install.cpp  install.h  install_app.cpp  install_app.h  launch.cpp  launch.h  launch_app.cpp  launch_app.h  reset.cpp  reset.h  run.cpp  run.h  session_manager.cpp  session_manager.h  shell.cpp  shell.h  start_container.cpp  start_container.h  system_info.cpp  system_info.h  version.cpp  version.h  wait_ready.cpp  wait_ready.h
src/anbox/common/: binary_writer.cpp  binary_writer.h  binder_device.cpp  binder_device.h  binder_device_allocator.cpp  binder_device_allocator.h  binderfs.h  dispatcher.cpp  dispatcher.h  fd.cpp  fd.h  fd_sets.h  loop_device.cpp  loop_device.h  loop_device_allocator.cpp  loop_device_allocator.h  message_channel.cpp  message_channel.h  mount_entry.cpp  mount_entry.h  scope_ptr.h  (+5 more)
tests/: CMakeLists.txt
tests/anbox/: CMakeLists.txt
(+597 files in other folders)
